Member departments are colored red in the popup departments list. Moves javascript to its own file

--- a/static_map_webpage/index.css
+++ b/static_map_webpage/index.css
@@ -57,3 +57,9 @@ body, html {
   font-size: 12px;
   z-index: 1000;
 }
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin-bottom: 0.5rem;
+}
